--- a/Dockerfile1
+++ b/Dockerfile1
@@ -2,7 +2,7 @@ FROM yuchen168/uwsgi-nginx-unprivileged
 # FROM yuchen168/myapp001
 
 
-EXPOSE 10000/tcp
+EXPOSE 8000
 
 # CMD ["nginx", "-g", "daemon off;"]
 # nginx -g 'daemon off;'
